--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,4 +1,18 @@
 spring:
+  redis:
+    port: 13000
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: embeddedlsek@gmail.com
+    password: flnzppcmjezjucwz
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            required: true
+            enable: true
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test
@@ -20,3 +34,10 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
         show_sql: false
     open-in-view: false
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 13000
+
+token:
+  secret: hello-test
